# math_lib

./: .gitignore  CMakeLists.txt  README.md  laml.config.h.in
cmake/: laml.config.h.in
include/: laml.hpp
include/laml/: Constants.hpp  Data_types.hpp  Functions.hpp  Matrix2.hpp  Matrix3.hpp  Matrix4.hpp  Matrix_base.hpp  Quaternion.hpp  Transform.hpp  Vector.hpp  constants.hpp  data_types.hpp  laml.hpp  matrix.hpp  matrix4.hpp  matrix_base.hpp  quaternion.hpp  transform.hpp  vector.hpp
src/: config.hpp  laml.cpp  vector.cpp
test/: CMakeLists.txt  main.cpp  matrix_test.cpp  matrix_test2.cpp  vector_test.cpp
tests/: CMakeLists.txt  main.cpp  matrix_test.cpp  matrix_test2.cpp  test_config.h  vector_test.cpp
